Fixes paragraph text align to left instead of justified

--- a/src/client/styles/tiles.scss
+++ b/src/client/styles/tiles.scss
@@ -747,7 +747,7 @@
 
 .post-excerpt-container{
   width: 100%;
-  text-align: justify;
+  text-align: left;
   word-wrap: break-word;
   margin-bottom: 15px;
   .post-excerpt-pharagraph{
